--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "example": "examples"
   },
   "scripts": {
-    "start": "node ./index.es",
+    "start": "bin/serve",
     "postinstall": "bin/publish",
     "package": "bin/package",
     "test": "./bin/test"
